examples/test/testpolicy3368.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3368
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key44: value16
      key13: value24
      key34: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value24
      podSelector:
        matchLabels:
          key1: value28
          key13: value39
